--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 </a>
 
                 <!-- Botão Instagram (COM RASTRO) -->
-                <a href="https://www.instagram.com/medemarcenaria?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="group w-full md:w-auto min-w-[260px] relative bg-transparent border border-mede-gold/50 text-mede-gold px-6 py-4 rounded-sm font-bold text-xs uppercase tracking-widest transition-all duration-500 hover:text-mede-brown hover:border-mede-gold flex items-center justify-center gap-4 overflow-hidden">
+                <a href="https://www.instagram.com/medemarcenaria?igsh=MW9lYnd2d280dmZicA==" target="_blank" class="group w-full md:w-auto min-w-[260px] relative bg-transparent border border-mede-gold/50 text-mede-gold px-6 py-4 rounded-sm font-bold text-xs uppercase tracking-widest transition-all duration-500 hover:text-mede-brown hover:border-mede-gold flex items-center justify-center gap-4 overflow-hidden">
                     <div class="absolute inset-0 w-full h-full bg-mede-gold translate-y-full group-hover:translate-y-0 transition-transform duration-500"></div>
                     <i data-lucide="instagram" class="w-5 h-5 transition-transform group-hover:rotate-12 relative z-10"></i>
                     <span class="relative z-10">Siga no Instagram</span>
