--- a/index.html
+++ b/index.html
@@ -198,8 +198,7 @@
                     <p class="text-gray-600 font-light leading-loose text-justify text-sm md:text-base">
                         Não entregamos apenas móveis, criamos cenários para a sua vida. Nossa etapa de consultoria mergulha na sua rotina para desenhar ambientes que unem a estética clássica à funcionalidade moderna. Cada linha é pensada para você.
                     </p>
-                  <a href="#contato" class="group relative inline-flex items-center justify-center gap-3 bg-mede-gold text-mede-brown px-8 py-4 uppercase tracking-[0.15em] text-xs font-bold transition-all duration-300 hover:bg-white hover:scale-105 shadow-[0_0_20px_rgba(249,228,183,0.3)] border border-mede-gold rounded-sm overflow-hidden mt-4">
-    <!-- Efeito de Rastro (Slide) igual ao do WhatsApp para manter a consistência -->
+                 <a href="#contato" class="group relative flex w-fit mx-auto md:inline-flex md:mx-0 items-center justify-center gap-3 bg-mede-gold text-mede-brown px-8 py-4 uppercase tracking-[0.15em] text-xs font-bold transition-all duration-300 hover:bg-white hover:scale-105 shadow-[0_0_20px_rgba(249,228,183,0.3)] border border-mede-gold rounded-sm overflow-hidden mt-4">
     <div class="absolute inset-0 w-full h-full bg-white/20 translate-y-full group-hover:translate-y-0 transition-transform duration-500"></div>
     
     <span class="relative z-10 border-b border-mede-brown/20 pb-0.5 group-hover:border-mede-brown transition-colors">
@@ -248,6 +247,63 @@
 
         </div>
     </section>
+   <section id="features-section" class="py-16 bg-[#f1e3d3] overflow-hidden">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12">
+
+      <div class="feature-item opacity-0 translate-y-12 transition-all duration-700 ease-out flex flex-col items-center text-center group hover:-translate-y-2">
+        <div class="mb-4 p-4 bg-white rounded-full text-[#5f5549] shadow-sm flex items-center justify-center transform transition-transform duration-500 group-hover:scale-110 group-hover:rotate-3">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M5 3H19C20.1046 3 21 3.89543 21 5V8C21 10.2974 19.4684 12.2339 17.3741 12.8187C16.2618 15.305 14.3263 17.37 12 18.5635V21H16V23H8V21H12V18.5635C9.67374 17.37 7.73821 15.305 6.62592 12.8187C4.53165 12.2339 3 10.2974 3 8V5C3 3.89543 3.89543 3 5 3ZM17 11.2202C18.1834 10.6968 19 9.45632 19 8V5H17V11.2202ZM7 11.2202V5H5V8C5 9.45632 5.81664 10.6968 7 11.2202ZM12 16.8301C14.3362 15.7572 15.8915 13.4838 16.4786 11H7.5214C8.1085 13.4838 9.6638 15.7572 12 16.8301Z"/>
+            </svg>
+        </div>
+        <h3 class="text-xl font-bold text-[#5f5549] mb-2">Líder em Planejados</h3>
+        <p class="text-[#5f5549]/80 text-sm leading-relaxed">
+        Muitos projetos entregues e sonhos realizados.
+        </p>
+      </div>
+
+      <div class="feature-item opacity-0 translate-y-12 transition-all duration-700 ease-out flex flex-col items-center text-center group hover:-translate-y-2 delay-100">
+        <div class="mb-4 p-4 bg-white rounded-full text-[#5f5549] shadow-sm flex items-center justify-center transform transition-transform duration-500 group-hover:scale-110 group-hover:rotate-3">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 24 24" fill="currentColor">
+               <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>
+            </svg>
+        </div>
+        <h3 class="text-xl font-bold text-[#5f5549] mb-2">+ De 30 Anos de História</h3>
+        <p class="text-[#5f5549]/80 text-sm leading-relaxed">
+          Tradição e excelência em cada projeto executado no Rio de Janeiro.
+        </p>
+      </div>
+
+      <div class="feature-item opacity-0 translate-y-12 transition-all duration-700 ease-out flex flex-col items-center text-center group hover:-translate-y-2 delay-200">
+        <div class="mb-4 p-4 bg-white rounded-full text-[#5f5549] shadow-sm flex items-center justify-center transform transition-transform duration-500 group-hover:scale-110 group-hover:rotate-3">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"/>
+            </svg>
+        </div>
+        <h3 class="text-xl font-bold text-[#5f5549] mb-2">Financeira Própria</h3>
+        <p class="text-[#5f5549]/80 text-sm leading-relaxed">
+          Condições exclusivas: pague em até 12x.
+        </p>
+      </div>
+
+      <div class="feature-item opacity-0 translate-y-12 transition-all duration-700 ease-out flex flex-col items-center text-center group hover:-translate-y-2 delay-300">
+        <div class="mb-4 p-4 bg-white rounded-full text-[#5f5549] shadow-sm flex items-center justify-center transform transition-transform duration-500 group-hover:scale-110 group-hover:rotate-3">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M23,12L20.56,9.22L20.9,5.54L17.29,4.72L15.4,1.54L12,3L8.6,1.54L6.71,4.72L3.1,5.53L3.44,9.21L1,12L3.44,14.78L3.1,18.47L6.71,19.29L8.6,22.47L12,21L15.4,22.46L17.29,19.28L20.9,18.46L20.56,14.78L23,12M10,17L6,13L7.41,11.59L10,14.17L16.59,7.58L18,9L10,17Z"/>
+            </svg>
+        </div>
+        <h3 class="text-xl font-bold text-[#5f5549] mb-2">3 Anos de Garantia</h3>
+        <p class="text-[#5f5549]/80 text-sm leading-relaxed">
+          Segurança total com materiais de excelência e acabamento premium para sua casa.
+        </p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 
     <!-- SEÇÃO DE AVALIAÇÕES GOOGLE (WIDGET SHAPO INTEGRADO) -->
     <section class="py-20 bg-gray-50 relative overflow-hidden">
@@ -269,6 +325,7 @@
             </div>
         </div>
     </section>
+
 
     <!-- Footer Premium (Compacto) -->
     <footer id="contato" class="bg-mede-brown text-white py-12 relative overflow-hidden">
