--- a/index.html
+++ b/index.html
@@ -138,20 +138,20 @@
                 Design Sob Medida
             </p>
             
-            <h1 class="font-serif text-white mb-6 md:mb-8 flex flex-col items-center w-full">
-                <div class="flex flex-row items-baseline justify-center gap-2 md:gap-5 w-full leading-[0.4] overflow-visible">
-                    <span class="text-[clamp(2.1rem,6vw,4.2rem)] font-normal whitespace-nowrap">Há mais de</span>
-                    <span class="luxury-30 font-extrabold text-[clamp(4.8rem,12vw,6.5rem)]">30</span>
-                    <span class="text-[clamp(2.1rem,6vw,4.2rem)] font-normal">anos</span>
-                </div>
-                <span class="italic font-light gold-gradient-text text-[clamp(2.3rem,9vw,4.8rem)] block -mt-[14px] md:-mt-8 leading-tight whitespace-nowrap tracking-tight px-2">
-                    entregando excelência
-                </span>
-            </h1>
+           <h1 class="font-serif text-white mb-4 md:mb-6 flex flex-col items-center w-full">
+    <div class="flex flex-wrap items-baseline justify-center gap-2 md:gap-4 w-full leading-tight overflow-visible">
+        <span class="text-[clamp(1.8rem,5vw,3.5rem)] lg:text-[clamp(2.1rem,4vw,4.2rem)] font-normal whitespace-nowrap">Há mais de</span>
+        <span class="luxury-30 font-extrabold text-[clamp(4rem,10vw,6rem)] lg:text-[clamp(4.8rem,8vw,6.5rem)]">30</span>
+        <span class="text-[clamp(1.8rem,5vw,3.5rem)] lg:text-[clamp(2.1rem,4vw,4.2rem)] font-normal">anos</span>
+    </div>
+    <span class="italic font-light gold-gradient-text text-[clamp(1.8rem,7vw,4rem)] lg:text-[clamp(2.3rem,6vw,4.8rem)] block -mt-2 md:-mt-6 lg:-mt-8 leading-tight whitespace-nowrap tracking-tight px-2">
+        entregando excelência
+    </span>
+</h1>
 
-            <p class="text-gray-100 font-light text-[clamp(1.05rem,1.8vw,1.4rem)] max-w-3xl mx-auto mb-10 md:mb-14 leading-relaxed px-4">
-                Transformamos ambientes com mobiliários de alto padrão que entregam exclusividade. Com sofisticação e personalização em cada detalhe!
-            </p>
+<p class="text-gray-100 font-light text-[clamp(0.95rem,1.5vw,1.2rem)] max-w-2xl lg:max-w-3xl mx-auto mb-6 md:mb-10 lg:mb-14 leading-relaxed px-4">
+    Transformamos ambientes com mobiliários de alto padrão que entregam exclusividade. Com sofisticação e personalização em cada detalhe!
+</p>
 
             <div class="flex flex-col md:flex-row gap-6 justify-center items-center">
                  <a href="https://wa.me/5521990892815?text=Olá!%20Tudo%20bem?%20Gostaria%20de%20solicitar%20um%20orçamento%20para%20um%20projeto%20de%20marcenaria%20sob%20medida.%20Como%20posso%20enviar%20os%20detalhes%20e%20as%20especificações%20para%20que%20vocês%20façam%20uma%20avaliação?" target="_blank" class="group relative inline-flex items-center gap-3 bg-[#25D366] backdrop-blur-sm text-white px-8 py-4 uppercase tracking-[0.1em] text-xs font-bold transition-all duration-300 hover:bg-[#128C7E] hover:scale-105 shadow-[0_0_20px_rgba(37,211,102,0.3)] border border-[#25D366] rounded-sm overflow-hidden">
@@ -296,7 +296,7 @@
                 <path d="M23,12L20.56,9.22L20.9,5.54L17.29,4.72L15.4,1.54L12,3L8.6,1.54L6.71,4.72L3.1,5.53L3.44,9.21L1,12L3.44,14.78L3.1,18.47L6.71,19.29L8.6,22.47L12,21L15.4,22.46L17.29,19.28L20.9,18.46L20.56,14.78L23,12M10,17L6,13L7.41,11.59L10,14.17L16.59,7.58L18,9L10,17Z"/>
             </svg>
         </div>
-        <h3 class="text-xl font-bold text-[#85603f] mb-2">5 Anos de Garantia</h3>
+        <h3 class="text-xl font-bold text-[#85603f] mb-2">3 Anos de Garantia</h3>
         <p class="text-[#85603f]/80 text-base leading-relaxed">
         Segurança total na tecnologia de construção, com materiais de excelência e acabamento perfeito. 
         </p>
